--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -15,7 +15,7 @@
     <!-- Form -->
     <div class="form-container">
         <h2>Login</h2>
-        <form>
+        <form action="/login" method="post">
             <!-- <input type="text" name="username" placeholder="Username" required> -->
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
