--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -1,37 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-     <style>
-           /* Navbar styling */
-        .navbar {
-            background-color: #333;
-            overflow: hidden;
-            
-        }
-        .navbar a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-        .navbar a:hover {
-            background-color: #575757;
-        }
-    </style>
-</head>
-<body>
-    <div class="navbar">
-        <a href="/home">Home</a>
-        <a href="/login">Login</a>
-        <a href="/register">Register </a>
-    </div>
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <style>
+            /* Navbar styling */
+            .navbar {
+                background-color: #333;
+                overflow: hidden;
+                
+            }
+            .navbar a {
+                float: left;
+                display: block;
+                color: white;
+                text-align: center;
+                padding: 14px 20px;
+                text-decoration: none;
+            }
+            .navbar a:hover {
+                background-color: #575757;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="navbar">
+            <a href="/home">Home</a>
+            <% if(isAuthenticated) { %>
+                <a href="/login">Logout</a>
+            <% }else { %>
+            <a href="/login">Login</a>
+            <a href="/register">Register </a>
+            <% }  %>
+        </div>
+
+    </body>
+    </html>
 
 
 
