--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 10px;
       background: #f4f4f9;
     }
 
@@ -50,7 +50,7 @@
 <body>
  <div class="card-container">
     <% data.forEach((item) => { %>
-      <div class="card">
+      <div class="card" onclick="window.location.href='/question/<%- item.id %>'">
         <h2><%- item.title %></h2>
         <p><%- item.user.username %></p>
         <!-- <p><%- item.user.password %></p> -->
