--- a/views/auth/forgetPassword.ejs
+++ b/views/auth/forgetPassword.ejs
@@ -14,13 +14,12 @@
 
     <!-- Form -->
     <div class="form-container">
-        <h2>Login</h2>
-        <form action="/login" method="post">
+        <h2>Forget Password</h2>
+        <form action="/forgotPassword" method="post">
             <!-- <input type="text" name="username" placeholder="Username" required> -->
             <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-            <a href="/forgotpassword">Forget Password?</a>
+            <button value="send OTP">Submit</button>
+            <!-- <input type="submit" value="send OTP"> -->
         </form>
     </div>
 
