--- a/views/auth/verifyOtp.ejs
+++ b/views/auth/verifyOtp.ejs
@@ -15,9 +15,9 @@
     <!-- Form -->
     <div class="form-container">
         <h2>Forget Password</h2>
-        <form action="/verifyOtp" method="post">
+        <form action="/verifyOtp/<%- email %>" method="post">
             <!-- <input type="text" name="username" placeholder="Username" required> -->
-            <input type="number" name="Otp" placeholder="Otp" required>
+            <input type="number" name="otp" placeholder="Otp" required>
             <button value="verify Otp">Submit</button>
             <!-- <input type="submit" value="Verify Otp  "> -->
         </form>
