--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -28,7 +28,7 @@
         <div class="navbar">
             <a href="/home">Home</a>
             <% if(isAuthenticated) { %>
-                <a href="/login">Logout</a>
+                <a href="/logout">Logout</a>
             <% }else { %>
             <a href="/login">Login</a>
             <a href="/register">Register </a>
