--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,6 +48,7 @@
   <%- include("./components/navbar.ejs")  %> 
 </head>
 <body>
+  <p style="color: green;"><%- success %></p>
  <div class="card-container">
     <% data.forEach((item) => { %>
       <div class="card" onclick="window.location.href='/question/<%- item.id %>'">
