--- a/views/questions/singleQuestion.ejs
+++ b/views/questions/singleQuestion.ejs
@@ -217,7 +217,8 @@
         <i>Author : <%- answer.user.username %></i>
         <i>Posted on: <%- new Date(data[0].createdAt).toLocaleDateString() %></i>
           <br>
-  <span id="likes"></span>   <button  class="like-btn" onclick="likePost(<%= answer.id %>)">👍 Like</button>
+   <button  class="like-btn" onclick="likePost(<%- answer.id %>)">👍 Like</button>
+    <span id="likes_<%- answer.id %>"></span> 
       </div>
    <% })   %>
  
@@ -233,12 +234,18 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
+    const cookie = document.cookie.split('=')
+    // console.log(cookie);
+    
     function likePost(answerId) {
-     socket.emit('like',answerId)
+     socket.emit('like',{
+      answerId,
+      cookie: cookie[1]
+     })
     }
-    socket.on('likeUpdate',(likesCount) =>{
+    socket.on('likeUpdate',({likesCount,answerId}) =>{
 //mathi span ko id pakreko
-      const likes = document.getElementById("likes")
+      const likes = document.getElementById(`likes_${answerId}`)
       likes.textContent = likesCount
     })
   </script>
