--- a/views/components/navbar.ejs
+++ b/views/components/navbar.ejs
@@ -27,6 +27,7 @@
     <body>
         <div class="navbar">
             <a href="/home">Home</a>
+            <a href="/askquestion">Ask Question</a>
             <% if(isAuthenticated) { %>
                 <a href="/logout">Logout</a>
             <% }else { %>
