--- a/views/auth/verifyOtp.ejs
+++ b/views/auth/verifyOtp.ejs
@@ -15,7 +15,10 @@
     <!-- Form -->
     <div class="form-container">
         <h2>Forget Password</h2>
+         
         <form action="/verifyOtp/<%- email %>" method="post">
+            <p style="color: red;"><%- error %></p>
+            <!-- <p style="color: green;"><% success %></p> -->
             <!-- <input type="text" name="username" placeholder="Username" required> -->
             <input type="number" name="otp" placeholder="Otp" required>
             <button value="verify Otp">Submit</button>
